--- a/DjangoNote/mysite/learn/templates/index.html
+++ b/DjangoNote/mysite/learn/templates/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
 <h1>LeiGao，欢迎光临！</h1>
+<form action="/search" method="get">
+	user: <input type="text" name="username"><br>
+	pswd: <input type="password" name="pwd"><br>
+	<input type="submit" name="" value="提交"><br>
+</form>
 </body>
 </html>
