--- a/DjangoNote/mysite/learn/templates/index.html
+++ b/DjangoNote/mysite/learn/templates/index.html
@@ -5,5 +5,11 @@
 </head>
 <body>
 <h1>LeiGao，欢迎光临！</h1>
+<form action="/check" method="post">
+	{% csrf_token %}
+	user: <input type="text" name="username"><br>
+	pswd: <input type="password" name="pwd"><br>
+	<input type="submit" name="" value="提交"><br>
+</form>
 </body>
 </html>
